rs/macros/tests/ui/gprogram_fails_handle_reply_signature.stderr
error: `handle_reply` function must be private and have a single `&self` argument and no return type
  --> tests/ui/gprogram_fails_handle_reply_signature.rs:12:5
   |
12 |     fn handle_reply() {}
   |     ^^^^^^^^^^^^^^^^^^^^
